Fixed it so purpose-child-two shrinks properly on mobile

--- a/style.css
+++ b/style.css
@@ -516,6 +516,6 @@ header .nav-login a {
 	}
 	
 	.purpose-child-two {
-		min-width: none;
+		min-width: 340px;
 	}
 }
